2008-02-29  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/encoders/flv/vp6_wizard.py:
	The steps should not be called windows media!

2008-02-25  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac:
	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	* flumotion/component/plugs/flashhttp/flashplayer_location.py.in:
	* flumotion/component/plugs/flashhttp/workercheck.py:
	Do not require flumotion-flash-player at configure time.
	Instead check for it at runtime.

2008-02-25  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Remove the now unused socket class attribute.

2008-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Add a proper flumotion http consumer wizard plugin

2008-02-12  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/muxers/flv/flv.xml: Add
	a provided-format.

2008-02-08  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/plugs/Makefile.am:
	* flumotion/component/plugs/__init__.py:
	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/__init__.py:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashplayer.html.template:
	* flumotion/component/plugs/flashhttp/flashplayer_location.py.in:
	* flumotion/component/plugs/flashhttp/fluflashembed.js:
	Add a dependency of flumotion-flash-player.
	Disable flv video encoder in the wizard, only support vp6 for now.