@@ -2,15 +2,8 @@
 # vi:si:et:sw=4:sts=4:ts=4
 #
 # Flumotion - a streaming media server
-# Copyright (C) 2004,2005,2006,2007,2008 Fluendo, S.L. (www.fluendo.com).
+# Copyright (C) 2008 Fluendo, S.L. (www.fluendo.com).
 # All rights reserved.
-
-# This file may be distributed and/or modified under the terms of
-# the GNU General Public License version 2 as published by
-# the Free Software Foundation.
-# This file is distributed without any warranty; without even the implied
-# warranty of merchantability or fitness for a particular purpose.
-# See "LICENSE.GPL" in the source distribution for more information.
 
 # Licensees having purchased or holding a valid Flumotion Advanced
 # Streaming Server license may use this file in accordance with the
@@ -19,9 +12,12 @@
 
 # Headers in this file shall remain intact.
 
-"""XXX
+"""Wizard plugin for the flashhttp plug
 """
 
+from zope.interface import implements
+
+from flumotion.wizard.interfaces import IHTTPConsumerPlugin
 from flumotion.wizard.models import HTTPServer, HTTPPlug
 
 __version__ = "$Rev$"
@@ -88,6 +84,7 @@ class FlashHTTPServer(HTTPServer):
 
 
 class FlashHTTPWizardPlugin(object):
+    implements(IHTTPConsumerPlugin)
     def __init__(self, wizard):
         self.wizard = wizard
 
