@@ -1,3 +1,12 @@
+2008-03-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* flumotion/component/encoders/flv/flv_wizard.py:
+	* flumotion/component/encoders/flv/vp6_wizard.py:
+	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
+	Mark the wizard plugins with interfaces.
+	Add a docstring,
+	remove GPL header.
+
 2008-02-29  Johan Dahlin  <jdahlin@async.com.br>
 
 	* flumotion/component/encoders/flv/vp6_wizard.py:
